--- a/package.json
+++ b/package.json
@@ -2,13 +2,27 @@
     "name": "baudcast",
     "version": "0.0.0",
     "license": "MIT",
-    "description": "A simple messaging API, designed for the internet of things.",
+    "description": "An open source, realtime messaging API; designed for the internet of things.",
+    "author": {
+        "name": "Nilaksh Das",
+        "url": "https://github.com/nilakshdas"
+    },
+    "keywords": ["realtime", "events", "tcp"],
+    "homepage": "https://github.com/nilakshdas/baudcast",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/nilakshdas/baudcast.git"
+    },
+    "bugs": {
+        "url": "https://github.com/nilakshdas/baudcast/issues"
+    },
     "bin": {
         "baudcast": "./app.js"
     },
     "dependencies": {
         "express": "4.4.1",
         "body-parser": "1.3.0",
-        "redis": "0.10.3"
+        "redis": "0.10.3",
+        "socket.io": "1.0.4"
     }
 }
